BJS2-40657 Project Stages <Commit With Bugs>